examples/restify/src/deploy/app-service.tpl.yml
apiVersion: v1
kind: Service
metadata:
  name: ${APP_KEY} # a name for the service
  namespace: ${APP_KUB_NAMESPACE}
  labels:
    app: ${APP_KEY} # tag the app:grello label onto the service as well
spec:
  #type: NodePort
  type: ClusterIP
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: ${APP_KEY} # points to the label key for deployment

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${APP_KEY}
  namespace: ${APP_KUB_NAMESPACE}
  labels:
    app: ${APP_KEY} # add the app=grello label onto the service as well
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: ${APP_KUB_INGRESS_URL}
    http:
      paths:
      - backend:
          service:
            name: ${APP_KEY}
            port:
              number: 8080
        pathType: ImplementationSpecific
  tls:
  - hosts:
      - ${APP_KUB_INGRESS_URL}
    # secretName: 9ci-io-wild
